--- a/rise/html/insert_news.html
+++ b/rise/html/insert_news.html
@@ -3,10 +3,11 @@
 
 <h1>RISE NEWS 登録画面</h1>
 
-<form action = "service/insert_news_service.php" method="post" enctype="multipart/form-data" onsubmit="return formcheck();">
+<form action = "../service/insert_news_service.php" method="post" enctype="multipart/form-data" onsubmit="return formcheck();">
 	IMG:<br><input type="file" id ="img_file" name="img_file"><br>
 	TITLE :<br><input type="text" name="title"><br>
 	CONTENT:<br><textarea name="content" style="height: 500px; width: 500px;"></textarea><br>
-	<input type="submit" value="登録"> <input type="button" value="戻る" onclick="location.href= 'news.php'">
+	<input type="checkbox" name="chk">実績登録<br>
+	<input type="submit" value="登録"> <input type="button" value="戻る" onclick="location.href= '../news.php'"><br>
 </form>
 
