--- a/rise/html/insert_news.html
+++ b/rise/html/insert_news.html
@@ -1,13 +1,33 @@
-<link rel="stylesheet" href="css/style.css">
-<script type="text/javascript" src="js/filecheck.js"></script>
+<html>
+<head>
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/popupmodal.css" >
+<script type="text/javascript" src="../js/filecheck.js"></script>
+<script type="text/javascript" src="../js/popupmodal.js"></script>
+<script type="text/javascript">
+	function chk1() {
+		var a =	popup.confirm( { content : "一覧画面へ戻ります。" },
+			function(param){
+			    if (param.proceed){
+			    	location.href= '../news.php';
+			    }
+			  }
+		 );
+	}
+</script>
+</head>
 
-<h1>RISE NEWS 登録画面</h1>
+<body>
 
-<form action = "../service/insert_news_service.php" method="post" enctype="multipart/form-data" onsubmit="return formcheck();">
-	IMG:<br><input type="file" id ="img_file" name="img_file"><br>
-	TITLE :<br><input type="text" name="title"><br>
-	CONTENT:<br><textarea name="content" style="height: 500px; width: 500px;"></textarea><br>
-	<input type="checkbox" name="chk">実績登録<br>
-	<input type="submit" value="登録"> <input type="button" value="戻る" onclick="location.href= '../news.php'"><br>
-</form>
+	<h1>RISE NEWS 登録画面</h1>
 
+	<form action = "../service/insert_news_service.php" method="post" enctype="multipart/form-data" onsubmit="return formcheck();">
+		IMG:<br><input type="file" id ="img_file" name="img_file"><br>
+		TITLE :<br><input type="text" name="title"><br>
+		CONTENT:<br><textarea name="content" style="height: 500px; width: 500px;"></textarea><br>
+		<input type="checkbox" name="chk">実績登録<br>
+		<input type="submit" value="登録"> <input type="button" value="戻る" onclick="chk1()">
+	</form>
+</body>
+
+</html>
