--- a/rise/html/insert_news.html
+++ b/rise/html/insert_news.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/popupmodal.css" >
 <script type="text/javascript" src="../js/filecheck.js"></script>
