--- a/rise/sub/index.html
+++ b/rise/sub/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.png">
+    <title>Rise Entertain Test Main</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/ed22bc04ac.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/ed22bc04ac.js"></script> -->
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -31,36 +35,96 @@
             <a class="nav-item nav-link" href="#">EVENT<hr /></a>
             <a class="nav-item nav-link" href="#">AUDITION<hr /></a>
             <a class="nav-item nav-link" href="#">COMPANY<hr /></a>
-            <div id="social-icon">
-              <i class="fab fa-twitter-square"  style="font-size:30px"></i>
-              <i class="fab fa-facebook-square" style="font-size:30px"></i>
-              <i class="fab fa-youtube-square"  style="font-size:30px"></i>
+            <div id="social-icons">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-twitter-square"></i></a>
+              <a href=""><i class="fab fa-youtube-square"></i></a>
             </div>
           </div>
         </div>
       </nav>
     </div>
 
-    <div id="contents" class="w-75">
-      <div id="top" class="d-sm-flex justify-content-sm-end"><img class="w-25 h-25 d-block" src="images/logo.png"></div>
+    <div id="contents">
+      <div class="row mx-5">
+        <div class="col-10">
+        </div>
+        <div id="top" class="col-2 text-right">
+          <a href=""><img src="images/logo.png" width="100%" height="auto"></a>
+        </div>
+      </div>
+      <div class="row mx-5 pt-3">
+        <div class="col-9 align-self-center">
+          <div data-ride="carousel" class="carousel slide ml-15" id="carousel-1" data-interval="2500">
+            <div role="listbox" class="carousel-inner">
+                <div class="carousel-item active"><img class="w-100 d-block" src="images\main_banner1.jpg" alt="Slide Image" /></div>
+                <div class="carousel-item"><img class="w-100 d-block" src="images\main_banner2.jpeg" alt="Slide Image" /></div>
+            </div>
+            <div>
+              <a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a>
+              <a href="#carousel-1" role="button" data-slide="next" class="carousel-control-next"><span aria-hidden="true" class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>
+            </div>
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-1" data-slide-to="1"></li>
+                <li data-target="#carousel-1" data-slide-to="2"></li>
+            </ol>
+          </div>
+        </div>
+        <div class="col-3">
+          <a href=""><img class="d-inline-block" src="images/audition.png" width="100%" height="auto"><br /></a>
+        </div>
+      </div>
 
-    <div data-ride="carousel" class="carousel slide" id="carousel-1" data-interval="2000">
-      <div role="listbox" class="carousel-inner">
-          <div class="carousel-item active"><img class="w-100 d-block" src="images\main_banner1.jpg" alt="Slide Image" /></div>
-          <div class="carousel-item"><img class="w-100 d-block" src="images\main_banner2.jpeg" alt="Slide Image" /></div>
+      <div class="row pt-5 mx-5">
+        <div class="col-9">
+          <div id="news" >
+            <ul class="list-group">
+              <li class="list-group-item bg-danger text-center text-white" style="font-size:20px;">NEWS</li>
+              <li class="list-group-item border-danger"  style="width:100%; height:auto; max-height: 150px; overflow-y:scroll">
+                <div class="row">
+                  <span class="col-md-12 col-lg-3">2019年6月1日</span><span class="col-md-12 col-lg-9"><a href="">舞台　〜百年書店へようこそ〜　ルパンvsホームズ  -世紀の戦い- 好評発売中！</a></span>
+                </div>
+                <div class="row">
+                  <span class="col-md-12 col-lg-3">2019年6月1日</span><span class="col-md-12 col-lg-9"><a href="">Rilika＆梶礼美菜 TALK＆LIVE〜あなたもきっと共感するLoveSong〜 好評発売中！</a></span>
+                </div>
+                <div class="row">
+                  <span class="col-md-12 col-lg-3">2019年6月1日</span><span class="col-md-12 col-lg-9"><a href="">INJUN Special Premium Event & Special Live 好評発売中！</a></span>
+                </div>
+                <!-- ・<span class="mr-5">2019年6月1日</span> <a href="">Rilika＆梶礼美菜 TALK＆LIVE〜あなたもきっと共感するLoveSong〜 好評発売中！</a><br />
+                ・<span class="mr-5">2019年6月1日</span> <a href="">舞台 「続・雷神とリーマン」 好評発売中！</a><br />
+                ・<span class="mr-5">2019年6月1日</span> <a href="">INJUN Special Premium Event & Special Live 好評発売中！</a><br /> -->
+              </li>
+            </ul>
+          </div>
+
+          <div id="banners" class="w-100 text-bottom">
+            <div class="row pt-5">
+              <div class="col-4">
+                <a href="#"><img src="images/banner1.jpg" width="100%" height="auto"></a>
+              </div>
+              <div class="col-4">
+              <a href="#"><img src="images/banner2.jpg" width="100%" height="auto"></a>
+              </div>
+              <div class="col-4">
+                <a href="#"><img src="images/banner1.jpg" width="100%" height="auto"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-3">
+          <a href="#"><img src="images/event.png" width="100%" height="auto"></a>
+        </div>
       </div>
-      <div>
-        <a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a>
-        <a href="#carousel-1" role="button" data-slide="next" class="carousel-control-next"><span aria-hidden="true" class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>
+
+      <!-- footer -->
+      <div class="text-center pt-5">
+        Copyright © 2019 Rise Communication All Right Reserved.
       </div>
-      <ol
-          class="carousel-indicators">
-          <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-1" data-slide-to="1"></li>
-          <li data-target="#carousel-1" data-slide-to="2"></li>
-      </ol>
-    </div>
+
   </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
