--- a/rise/sub/main/index.html
+++ b/rise/sub/main/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="../images/favicon.png">
     <title>Rise Entertain Test Main</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -50,15 +50,15 @@
         <div class="col-10">
         </div>
         <div id="top" class="col-2 text-right">
-          <a href=""><img src="images/logo.png" width="100%" height="auto"></a>
+          <a href=""><img src="../images/logo.png" width="100%" height="auto"></a>
         </div>
       </div>
       <div class="row mx-5 pt-3">
         <div class="col-9 align-self-center">
           <div data-ride="carousel" class="carousel slide ml-15" id="carousel-1" data-interval="2500">
             <div role="listbox" class="carousel-inner">
-                <div class="carousel-item active"><img class="w-100 d-block" src="images\main_banner1.jpg" alt="Slide Image" /></div>
-                <div class="carousel-item"><img class="w-100 d-block" src="images\main_banner2.jpeg" alt="Slide Image" /></div>
+                <div class="carousel-item active"><img class="w-100 d-block" src="../images/main_banner1.jpg" alt="Slide Image" /></div>
+                <div class="carousel-item"><img class="w-100 d-block" src="../images/main_banner2.jpeg" alt="Slide Image" /></div>
             </div>
             <div>
               <a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="col-3">
-          <a href=""><img class="d-inline-block" src="images/audition.png" width="100%" height="auto"><br /></a>
+          <a href=""><img class="d-inline-block" src="../images//audition.png" width="100%" height="auto"><br /></a>
         </div>
       </div>
 
@@ -101,20 +101,20 @@
           <div id="banners" class="w-100 text-bottom">
             <div class="row pt-5">
               <div class="col-4">
-                <a href="#"><img src="images/banner1.jpg" width="100%" height="auto"></a>
+                <a href="#"><img src="../images/banner1.jpg" width="100%" height="auto"></a>
               </div>
               <div class="col-4">
-              <a href="#"><img src="images/banner2.jpg" width="100%" height="auto"></a>
+              <a href="#"><img src="../images/banner2.jpg" width="100%" height="auto"></a>
               </div>
               <div class="col-4">
-                <a href="#"><img src="images/banner1.jpg" width="100%" height="auto"></a>
+                <a href="#"><img src="../images/banner1.jpg" width="100%" height="auto"></a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="col-3">
-          <a href="#"><img src="images/event.png" width="100%" height="auto"></a>
+          <a href="#"><img src="../images/event.png" width="100%" height="auto"></a>
         </div>
       </div>
 
